# pyneutrino

./: .dockerignore  .editorconfig  .gitignore  .releaserc.json  LICENSE  README.md  alembic.ini  docker-compose.yaml  gunicorn.conf.py  pyproject.toml  tox.ini  uwsgi_dev.ini
.github/workflows/: _tests.yml  branches.yml  merge_request.yml  python-tests.yml  tags.yml
dev_db_init/: neutrinodb.sh
docker_build/: Dockerfile  entrypoint.sh  gunicorn.conf.py
frontend-src/: angular.json  package-lock.json  package.json
frontend-src/src/: index.html  index_dev.html  index_prod.html  main.ts  styles.scss
frontend-src/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
frontend-src/src/locale/: messages.fr-FR.xlf  messages.xlf
migrations/: env.py  script.py.mako
migrations/versions/: 2023_12_29_1201-747eb5bc99eb_create_users_and_conversations.py  2024_01_05_0115-411819536280_update_user_fields.py  2024_01_05_0130-38c508973787_update_conversation_and_message_fields.py  2024_01_05_1148-6a60c2887c98_add_update_and_creation_date_to_.py  2024_01_05_1457-a6936caa2ede_adjust_relationships_between_entities.py  2024_01_05_1537-4ffd424766cb_add_indices_on_conversations_and_.py  2024_01_06_1904-195c70528b47_add_invite_code_on_conversations.py  2024_01_08_1759-62dce14e12c2_make_usernames_nullable.py  2024_01_09_0141-3b0d8abd0281_make_private_keys_nullable_for_anonymous_accounts.py  2024_01_09_0141-3b0d8abd0281_make_private_keys_nullable_for_guest_accounts.py
pyneutrino/: __init__.py
pyneutrino/auth/: __init__.py  login.py  registration.py
pyneutrino/commands/: __init__.py  wait_db.py
pyneutrino/db/: __init__.py  _db.py  _redis.py  conversation.py  sent_message.py  user_account.py
pyneutrino/errors/: __init__.py
pyneutrino/home/: __init__.py
pyneutrino/hooks/: __init__.py  csrf.py  xsrf.py
pyneutrino/services/: __init__.py  auth.py  authguard.py  jsonschema.py  serializer.py
pyneutrino/web/auth/: __init__.py  registration.py  session.py
pyneutrino/web/home/: __init__.py
tests/: _utils.py  conftest.py  test_conversation.py  test_messages.py  test_migrations.py  test_registration.py  test_session.py  test_wait_db.py  test_xsrf.py
(+32 files in other folders)
