[tool.poetry]
name = "pyneutrino"
version = "0.1.0"
description = ""
authors = ["Corentin de Boisset <corentin.deboisset@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
gunicorn = "^21.2.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
types-flask-migrate = "^4.0.0.7"
psycopg2-binary = "^2.9.9"
jsonschema = "^4.20.0"
types-jsonschema = "^4.20.0.0"
passlib = "^1.7.4"
types-passlib = "^1.7.7.13"
argon2-cffi = "^23.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.3"
tox = "^4.11.4"
flake8-pyproject = "^1.2.3"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
