[tool.poetry]
name = "pyneutrino"
version = "0.1.0"
description = ""
authors = ["Corentin de Boisset <corentin.deboisset@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
psycopg2-binary = "^2.9.9"
jsonschema = "^4.20.0"
types-jsonschema = "^4.20.0.0"
argon2-cffi = "^23.1.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.12"
gunicorn = "^21.2.0"
redis = "^5.0.1"
gevent = "^23.9.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.3"
tox = "^4.11.4"
flake8-pyproject = "^1.2.3"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
black = "^23.12.1"
pytest-alembic = "^0.10.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
